projetos/desafio-final-dk8s/semana-3/k8s/tipsbank-transacoes/api-transacoes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
  labels:
    app: api-transacoes
spec:
  selector:
    app: api-transacoes
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
